--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/icon.png" />
+    <link rel="icon" type="image/png" href="/src/assets/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shopify</title>
+    <meta name="description" content="Compra las mejores sillas, mesas y escritorios en Chile. Calidad y diseño al mejor precio.">
+    <meta name="keywords" content="sillas, mesas, escritorios, muebles, oficina, hogar, Chile, venta de muebles, muebles de oficina, muebles para el hogar, sillas ergonómicas, mesas de comedor, escritorios modernos, muebles de diseño, muebles baratos, muebles de calidad, muebles en Santiago, muebles en Valparaíso, muebles en Concepción, muebles en La Serena, muebles en Antofagasta">
+    <meta name="author" content="Servicios Integrales del Norte">
+    <title>Servicios Integrales del Norte</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
